# EA-metrics

./: .gitignore  README.md  populate.sh
IT_Cost_Efficiency/: README.md  it-cost-efficiency.py  pyproject.toml
Tribal_Knowledge/: .gitignore  README.md  generate_dummy_data.py  language_hierarchy_cypher.py  pyproject.toml  tribal-knowledge.py  tribal_knowledge.ipynb  utils.py
Tribal_Knowledge/data/: apache_repo_attributes.joblib  apache_repos.joblib  dummy_data.csv  dummy_language_data.txt  output_cypher_file.cypher
Tribal_Knowledge/streamlit/: app.py
Tribal_Knowledge/tribal_knowledge/: language_hierarchy_cypher.py  repo_crawler.py  utils.py
