[tool.poetry]
name = "it-cost-efficiency"
version = "0.1.0"
description = ""
authors = ["mpearmain <michael.pearmain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
